2003-03-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Removed gimp-gap and added red-carpet.

2003-03-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Added gimp-gap.

2003-03-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added battfink.

2003-03-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-media.

2003-03-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-desktop.

2003-03-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for vte.

2003-03-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-pim is not part of Fifth Toe.

2003-03-05  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Added mlview.

2003-03-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Massive changes; tried to correct the
	modules used for 2.2 Fifth Toe by using the Fifth Toe web site.
	Again.

2003-02-26  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* translation-status.xml: removed anjuta2 module. It's not mature
	enough.

2003-02-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: evolution is *NOT* part of Fifth Toe.

2003-02-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo and libbonobui have been
	branched. Reflect this.

2003-02-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed ludwig. It looks dead.

2003-02-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: New module gedit-plugins. Added to
	2.2-extras.

2003-02-24  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* translation-status.xml: Correct anjuta modules to give
		the correct status for gnome-1.4 (ANJUTA_1_0_0 branch)
		gnome-2.2 anjuta (HEAD branch)
		New project anjuta2 (different module, HEAD branch)

2003-02-22  Christian Rose  <menthos@menthos.com>
