@@ -1404,17 +1404,6 @@
       </component>
     </version>
   </module>
-  <module name="gpaint">
-    <version release="gnome-2.2">
-      <component name="gpaint" dir="gpaint" group="fifth-toe">
-        <podir dir="po"/>
-        <potname name="gpaint.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="gpdf">
     <version release="gnome-1.4">
       <component name="gpdf" dir="gpdf" group="extras">
