@@ -1,3 +1,7 @@
+2003-03-29  Christian Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: Removed gpaint.
+
 2003-03-26  Carlos Perelló Marín <carlos@gnome.org>
 
 	* translation-status.xml: Removed gimp-gap and added red-carpet.
